# FINANCE-APP

./: JAPOIL JUNE.xls  README.md  ai_studio_code.txt  b.csv  docker-compose.yml  pyproject.toml  section f.csv  test.db
.kiro/specs/production-finance-app/: design.md  requirements.md  tasks.md
archive/: README.md  main.py
backend/: .env.example  BUSINESS_FEATURES_README.md  Dockerfile  INTEGRATION_FRAMEWORK_README.md  KRA_EFILING_IMPLEMENTATION_SUMMARY.md  KRA_TAX_README.md  ML_CATEGORIZATION_README.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  alembic.ini  create_migration.py  minimal_csv_test.py  requirements.txt  sample_transactions.csv  simple_test.py  test_api_endpoints.py  test_business_simple.py  test_categorization_integration.py  test_import.py  test_ml_categorization_demo.py  validate_business_logic.py  validate_kra_efiling.py  validate_security.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_transactions.py  add_budget_tables.py  add_business_tables.py  (+4 more)
backend/app/: main.py
backend/tests/: conftest.py  test_auth.py  test_auth_simple.py  test_business.py  test_categorization_api.py  test_categorization_system.py  test_csv_importer.py  test_csv_importer_simple.py  test_export_service.py  test_integration_complete.py  test_integrations.py  test_kra_efiling_integration.py  test_kra_tax.py  test_ml_categorization.py  test_models.py  test_reporting_schemas.py  test_reporting_service.py  test_reporting_system.py  test_security.py  test_transaction_import.py
frontend/: README.md  jest.setup.js  package-lock.json  package.json
(+111 files in other folders)
