[project]
name = "finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "reportlab>=4.4.3",
    "streamlit>=1.47.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.2",
    "openpyxl>=3.1.5",
    "xlrd>=1.2.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.24.0",
]
